<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center" />
    
    <TextView
        android:id="@+id/videoViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videoViewTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/videoRatingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videoRatingViewStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0" />

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_download" />

    <Button
        android:id="@+id/btnViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_video_rating" />

</LinearLayout>