<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_check_in" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/checkInForm"
    tools:context="com.capstone.coursera.gidma.activity.CheckInActivity">


    <LinearLayout android:id="@+id/user_checkIn_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/checkin_bloodSugarLvlFastingEditText" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/checkin_bloodSugarLvlFasting"
                android:imeActionId="@+id/checkin_bloodSugarLvlFastingEditText"
                android:imeActionLabel="@string/checkin_bloodSugarLvlFasting"
                android:imeOptions="actionUnspecified" android:inputType="number"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/checkin_bloodSugarLvlMTEditText" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/checkin_bloodSugarLvlMT"
                android:imeActionId="@+id/checkin_bloodSugarLvlMTEditText"
                android:imeActionLabel="@string/checkin_bloodSugarLvlMT"
                android:imeOptions="actionUnspecified" android:inputType="number"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/checkin_bloodSugarLvlBTEditText" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/checkin_bloodSugarLvlBT"
                android:imeActionId="@+id/checkin_bloodSugarLvlBTEditText"
                android:imeActionLabel="@string/checkin_bloodSugarLvlBT"
                android:imeOptions="actionUnspecified" android:inputType="number"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/checkin_bloodSugarLvlTimeEditText" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/checkin_bloodSugarLvlTime"
                android:imeActionId="@+id/checkin_bloodSugarLvlTimeEditText"
                android:imeActionLabel="@string/checkin_bloodSugarLvlTime"
                android:imeOptions="actionUnspecified" android:inputType="time"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/checkin_eatMTEditText" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/checkin_eatMT"
                android:imeActionId="@+id/checkin_eatMTEditText"
                android:imeActionLabel="@string/checkin_eatMT"
                android:imeOptions="actionUnspecified" android:inputType="text"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>



        <CheckBox
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/checkin_insulin"
            android:id="@+id/isPatentCheckBox"
            android:checked="false"
            android:layout_gravity="left"
            android:textStyle="normal"
            android:gravity="center_vertical|left"
            android:textSize="18dp" />

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/checkin_whoWithYouEditText" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/checkin_whoWithYou"
                android:imeActionId="@+id/checkin_whoWithYouEditText"
                android:imeActionLabel="@string/checkin_whoWithYou"
                android:imeOptions="actionUnspecified" android:inputType="text"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/checkin_whereWereYouEditText" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/checkin_whereWereYou"
                android:imeActionId="@+id/checkin_whereWereYouEditText"
                android:imeActionLabel="@string/checkin_whereWereYou"
                android:imeOptions="actionUnspecified" android:inputType="text"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/checkin_mood"
            android:textAlignment="viewStart"
            android:textSize="18dp"/>

        <RatingBar
            android:id="@+id/checkin_moodRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin" android:text="@string/checkin_stress"
            android:textAlignment="viewStart" android:textSize="18dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkin_stressRatingBar"
            android:layout_gravity="right"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin" android:text="@string/checkin_energyLvl"
            android:textAlignment="viewStart" android:textSize="18dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkin_energyLvlRatingBar"
            android:layout_gravity="right"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />


        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/checkin_bloodSugarLvlTimeEvent"
            android:textAlignment="viewStart" android:textSize="18dp"/>

        <Spinner
            android:id="@+id/checkin_bloodSugarLvlTimeEventData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/checkin_bloodSugarLvlTimeEvent_arrays"
            android:prompt="@string/checkin_bloodSugarLvlTimeEvent_prompt"
            android:layout_gravity="right"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkIn"
            android:id="@+id/checkInBtn"
            android:onClick="checkInData"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />




    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
