<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:gravity="center_horizontal"
android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".SignUpActivity">

    <!-- Sign Up progress -->
    <ProgressBar android:id="@+id/signUp_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/signUp_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/user_signUp_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">


<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText android:id="@+id/userIdEditText" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/userId"
        android:imeActionId="@+id/userIdEditText"
        android:imeActionLabel="@string/userId"
        android:imeOptions="actionUnspecified" android:inputType="text"
        android:maxLines="1" android:singleLine="true" />

</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText android:id="@+id/passwordEditText" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/password"
        android:imeActionId="@+id/passwordEditText"
        android:imeActionLabel="@string/password"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true" />

</android.support.design.widget.TextInputLayout>



<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText android:id="@+id/repetePassEditText" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/repeatPassword"
        android:imeActionId="@+id/repetePassEditText"
        android:imeActionLabel="@string/repeatPassword"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true" />

</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText android:id="@+id/firstNameEditText" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/firstName"
        android:imeActionId="@+id/firstNameEditText"
        android:imeActionLabel="@string/firstName"
        android:imeOptions="actionUnspecified" android:inputType="text"
        android:maxLines="1" android:singleLine="true" />

</android.support.design.widget.TextInputLayout>


<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText android:id="@+id/lastNameEditText" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/lastName"
        android:imeActionId="@+id/lastNameEditText"
        android:imeActionLabel="@string/lastName"
        android:imeOptions="actionUnspecified" android:inputType="text"
        android:maxLines="1" android:singleLine="true" />

</android.support.design.widget.TextInputLayout>


<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText android:id="@+id/dateOfBirthEditText" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/dateOfBirth"
        android:imeActionId="@+id/dateOfBirthEditText"
        android:imeActionLabel="@string/dateOfBirth"
        android:imeOptions="actionUnspecified" android:inputType="date"
        android:maxLines="1" android:singleLine="true" />


<CheckBox
    android:layout_width="129dp"
    android:layout_height="wrap_content"
    android:text="@string/isPatient"
    android:id="@+id/isPatentCheckBox"
    android:checked="false"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:textStyle="bold"
    android:gravity="center_vertical|center_horizontal"
    android:textSize="20dp" />


</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText android:id="@+id/medRecNumEditText" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/medRecNum"
        android:imeActionId="@+id/medRecNumEditText"
        android:imeActionLabel="@string/medRecNum"
        android:imeOptions="actionUnspecified" android:inputType="text"
        android:maxLines="1" android:singleLine="true" />

</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wantToBeFollowed"
        android:id="@+id/wantToBeFollowedCheckBox" />

</android.support.design.widget.TextInputLayout>


<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Sign Up !"
    android:id="@+id/signUpBtn"
    android:onClick="signUpNewUser"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
